Fix word wrapping

--- a/style.less
+++ b/style.less
@@ -61,8 +61,6 @@ Mixins
 
 .styled-caption {
 	text-transform: uppercase;
-	white-space: nowrap;
-	line-height: 1;
 	letter-spacing: 1px;
 }
 
@@ -73,7 +71,7 @@ Mixins
 	color: @secondary-font-color;
 	transition: color @animation-duration, background-color @animation-duration;
 	border-radius: 9999px;
-	padding: 0.5rem 0.75rem;
+	padding: 0.375rem 0.75rem;
 }
 
 .styled-tag {
@@ -81,7 +79,7 @@ Mixins
 	font-size: 0.6875rem;
 	border: 1px solid @border-color;
 	border-radius: @border-radius;
-	padding: 0.4rem 0.5rem;
+	padding: 0.25rem 0.5rem;
 	color: inherit;
 	transition: color @animation-duration, border-color @animation-duration;
 }
@@ -189,6 +187,7 @@ textarea {
 	&-container--default &-selection--inline &-selection__rendered {
 		.styled-caption;
 		font-size: 0.6875rem;
+		line-height: 1;
 	}
 }
 
@@ -1113,6 +1112,7 @@ HivePress
 		&__actions--secondary &__balance {
 			strong {
 				.styled-caption;
+				line-height: 1;
 				font-size: 0.6875rem;
 			}
 		}
